@@ -1,3 +1,8 @@
+2013-01-31  Ian Lance Taylor  <iant@google.com>
+
+	* dwarf.c (read_function_info): Permit fvec parameter to be NULL.
+	(dwarf_lookup_pc): Don't use ddata->fvec if threaded.
+
 2013-01-25  Jakub Jelinek  <jakub@redhat.com>
 
 	PR other/56076
